# opaque-vx

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: license.rs
.gitea/workflows/: ci.yml
benches/: opaque.rs
examples/: digital_locker.rs  simple_login.rs
scripts/: digital_locker.exp  simple_login.exp
src/: ciphersuite.rs  envelope.rs  errors.rs  hash.rs  keypair.rs  ksf.rs  lib.rs  messages.rs  opaque.rs
src/key_exchange/: mod.rs  shared.rs  tripledh.rs  tripledh_kem.rs
src/key_exchange/group/: curve25519.rs  ed25519.rs  elliptic_curve.rs  mod.rs  ristretto255.rs
src/key_exchange/sigma_i/: ecdsa.rs  hash_eddsa.rs  message.rs  mod.rs  pure_eddsa.rs  shared.rs
src/serialization/: mod.rs  tests.rs
src/tests/: full_test.rs  full_test_vectors.rs  mock_rng.rs  mod.rs  parser.rs  rfc9807_vectors.rs  test_opaque_vectors.rs
tests/: remote_key.rs
